--- a/playsound.html
+++ b/playsound.html
@@ -25,6 +25,25 @@
     </body>-->
 	
 	<script src='https://code.jquery.com/jquery-2.2.0.min.js'></script>
+	    <script type="text/css">
+	    #background {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: url('images/background.jpg');
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: 100%;
+    opacity: 0.8;
+    filter:alpha(opacity=80);
+}
+	    </script>
 <script src='https://cdn.rawgit.com/admsev/jquery-play-sound/master/jquery.playSound.js'></script>
+	    <body>
+		    <div id="background">
 <button onclick='$.playSound("http://soundbible.com/grab.php?id=843&type=mp3")'>Test Alarm</button>
+			    </div>
+	    </body>
 </html>
