Test Smart Alerts URI

--- a/playsound.html
+++ b/playsound.html
@@ -45,7 +45,7 @@
 	    <body>
 		    <div id="background">
 <!--<audio id="audiotag1" src='http://soundbible.com/grab.php?id=843&type=mp3' preload="auto" autoplay="autoplay"></audio>-->
-<button onclick='$.playSound("http://soundbible.com/grab.php?id=843&type=mp3")'>Test Alarm</button>
+<button onclick='$.playSound("media/manual_pbm_count_abu_dhabi.mp3")'>Test Alarm</button>
 			    </div>
 <script type="text/javascript">
 var alarmFlag = true;
