--- a/playsound.html
+++ b/playsound.html
@@ -40,13 +40,14 @@
     opacity: 0.8;
     filter:alpha(opacity=80);
 }
+.transparent-style{
+    background-color: rgba(255, 255, 255, .2);
+}
 	    </script>
 <script src='https://cdn.rawgit.com/admsev/jquery-play-sound/master/jquery.playSound.js'></script>
-	    <body>
-		    <div id="background">
+	    <body class="transparent-style">
 <!--<audio id="audiotag1" src='http://soundbible.com/grab.php?id=843&type=mp3' preload="auto" autoplay="autoplay"></audio>-->
 <button onclick='$.playSound("media/manual_pbm_count_abu_dhabi.mp3")'>Test Alarm</button>
-			    </div>
 <script type="text/javascript">
 var alarmFlag = true;
 function playMe(){
