Transparent background code added

--- a/playsound.html
+++ b/playsound.html
@@ -41,7 +41,7 @@
     filter:alpha(opacity=80);
 }
 .transparent-style{
-    background-color: rgba(255, 255, 255, .2);
+    background-color:transparent;
 }
 	    </script>
 <script src='https://cdn.rawgit.com/admsev/jquery-play-sound/master/jquery.playSound.js'></script>
