--- a/playsound.html
+++ b/playsound.html
@@ -40,12 +40,12 @@
     opacity: 0.8;
     filter:alpha(opacity=80);
 }
-.transparent-style{
-    background-color:transparent;
+body {background:none transparent;
 }
+
 	    </script>
 <script src='https://cdn.rawgit.com/admsev/jquery-play-sound/master/jquery.playSound.js'></script>
-	    <body class="transparent-style">
+	    <body>
 <!--<audio id="audiotag1" src='http://soundbible.com/grab.php?id=843&type=mp3' preload="auto" autoplay="autoplay"></audio>-->
 <button onclick='$.playSound("media/manual_pbm_count_abu_dhabi.mp3")'>Test Alarm</button>
 <script type="text/javascript">
