--- a/test.html
+++ b/test.html
@@ -64,10 +64,7 @@ $.ajax({
             success: function (result) {
                 //CallBack(result);
 				var str = new XMLSerializer().serializeToString(result.documentElement);
-				if(str.includes('DHPO Pending Requests High') || str.includes('Shafafiya Pending Requests High') 
-				   || str.includes('PBM Downloads not received') 
-				   || str.includes('Request to Manual')
-				   || str.includes('PBM auto average high')){
+				if(str.includes('DHPO Pending Requests High') || str.includes('Shafafiya Pending Requests High')){
 					var alertname = "NA";
 					if(str.includes('DHPO Pending Requests High')){
 						alertname = "media/pend_prior_req_dhpo.mp3";
@@ -92,7 +89,7 @@ $.ajax({
             }
         });
 $.ajax({
-            url: 'https://cors-anywhere.herokuapp.com/https://damanhealth.saas.appdynamics.com/controller/rest/applications/6995/problems/healthrule-violations?time-range-type=BEFORE_NOW&duration-in-mins=2',
+            url: 'https://cors-anywhere.herokuapp.com/https://damanhealth.saas.appdynamics.com/controller/rest/applications/6995/problems/healthrule-violations?time-range-type=BEFORE_NOW&duration-in-mins=300',
             type: 'GET',
             headers: {
                 'Authorization': 'Basic YXBwZGwxQGRhbWFuaGVhbHRoOkFwcGRsMUAzMjE0',
@@ -101,8 +98,7 @@ $.ajax({
             success: function (result) {
                 //CallBack(result);
 				var str = new XMLSerializer().serializeToString(result.documentElement);
-				if(str.includes('DHPO Pending Requests High') || str.includes('Shafafiya Pending Requests High') 
-				   || str.includes('PBM Downloads not received') 
+				if(str.includes('PBM Downloads not received') 
 				   || str.includes('Request to Manual')
 				   || str.includes('PBM auto average high')){
 					var alertname = "NA";
