--- a/playsound.html
+++ b/playsound.html
@@ -8,7 +8,7 @@
 
         <!--<script type="text/javascript">
             /**
-             * @param {string} filename The name of the file WITHOUT ending
+             * @param {string} filename The name of the file WITHOUT ending new
              */
             function playSound(filename){   
                 document.getElementById("sound").innerHTML='<audio autoplay="autoplay"><source src="' + filename + '.mp3" type="audio/mpeg" /><source src="' + filename + '.ogg" type="audio/ogg" /><embed hidden="true" autostart="true" loop="false" src="' + filename +'.mp3" /></audio>';
