--- a/text-to-speech-demo.html
+++ b/text-to-speech-demo.html
@@ -1,7 +1,7 @@
 
 <!DOCTYPE html>
 <html>
-<head>
+<!--<head>
 <style>
 .talkify-audio-control {
   color: white;
@@ -68,5 +68,29 @@ $(document).ready(function() {
 
 <script src="https://use.fontawesome.com/28b687dd3d.js"></script>
 
-</body>
+</body>-->
+  <head>
+    <script src="https://rawgit.com/Hagsten/Talkify/master/dist/talkify.min.js"></script>
+    
+  </head>
+  <body>
+    <script>
+      talkify.config = {
+    remoteService: {
+        host : 'https://talkify.net',
+        apiKey = 'a2a8cfec-9d50-4c94-a135-b1b178538f6e',
+        active: true //True to use Talkifys language engine and hosted voices. False only works for Html5Player.
+    },
+    ui:
+    {
+        audioControls: { //If enabled, replaces the built in audio controls. Especially good for the Web Speech API bits
+            enabled: true,
+            container: document.body
+        }
+    }
+}
+      var player = new talkify.TtsPlayer(); //or new talkify.Html5Player()
+player.playText('Hello world');
+    </script>
+  </body>
 </html>
