typo fix in text-to-speech
typo fix

--- a/text-to-speech-demo.html
+++ b/text-to-speech-demo.html
@@ -78,7 +78,7 @@ $(document).ready(function() {
       talkify.config = {
     remoteService: {
         host : 'https://talkify.net',
-        apiKey = 'a2a8cfec-9d50-4c94-a135-b1b178538f6e',
+        apiKey : 'a2a8cfec-9d50-4c94-a135-b1b178538f6e',
         active: true //True to use Talkifys language engine and hosted voices. False only works for Html5Player.
     },
     ui:
