orig commit to text to speech
orig commit to text to speech

--- a/text-to-speech-demo.html
+++ b/text-to-speech-demo.html
@@ -1,7 +1,7 @@
 
 <!DOCTYPE html>
 <html>
-<!--<head>
+<head>
 <style>
 .talkify-audio-control {
   color: white;
@@ -68,7 +68,8 @@ $(document).ready(function() {
 
 <script src="https://use.fontawesome.com/28b687dd3d.js"></script>
 
-</body>-->
+</body>
+<!--
   <head>
     <script src="https://rawgit.com/Hagsten/Talkify/master/dist/talkify.min.js"></script>
     
@@ -93,4 +94,5 @@ $(document).ready(function() {
 player.playText('Hello world');
     </script>
   </body>
+-->
 </html>
