--- a/text-to-speech-demo.html
+++ b/text-to-speech-demo.html
@@ -14,7 +14,7 @@
 <link rel="stylesheet" href="https://rawgit.com/Hagsten/Talkify/master/styles/talkify-playlist.css">
 <link rel="stylesheet" href="https://rawgit.com/Hagsten/Talkify/master/styles/talkify-common.css">
 <link rel="stylesheet" href="https://rawgit.com/Hagsten/Talkify/master/styles/talkify-audiocontrols.css">
-
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 <script src="https://rawgit.com/Hagsten/Talkify/master/dist/talkify.min.js"></script>
 <script>
 talkify.config.remoteService.host = 'https://talkify.net';
