--- a/text-to-speech-demo.html
+++ b/text-to-speech-demo.html
@@ -18,7 +18,9 @@
 <script src="https://rawgit.com/Hagsten/Talkify/master/dist/talkify.min.js"></script>
 <script>
 talkify.config.remoteService.host = 'https://talkify.net';
-talkify.config.remoteService.apiKey = '46b32f4e-6b73-40ee-8ae1-4a17cb1b18f6';
+//talkify.config.remoteService.apiKey = '46b32f4e-6b73-40ee-8ae1-4a17cb1b18f6';
+talkify.config.remoteService.apiKey = 'a2a8cfec-9d50-4c94-a135-b1b178538f6e';
+  
 
 talkify.config.ui.audioControls = {
   enabled: true, //<-- Disable to get the browser built in audio controls
