--- a/text-to-speech-demo.html
+++ b/text-to-speech-demo.html
@@ -67,7 +67,7 @@ $(document).ready(function() {
   <form>
   <textarea name="message" rows="10" cols="30">The cat was playing in the garden.</textarea>
   <br>
-  <input type="buttom" onclick="tryMeDemo()" value="Play">
+  <input type="button" onclick="tryMeDemo()" value="Play">
   </form>
   <!--
   <p>
