--- a/text-to-speech-demo.html
+++ b/text-to-speech-demo.html
@@ -48,7 +48,7 @@ $(document).ready(function() {
     if(msg==""){
       msg = "Please type something";
     } 
-    sources[0].src = "https://talkify.net/api/speech/v1?rate=3&voice=David&text="+msg+"&key=a2a8cfec-9d50-4c94-a135-b1b178538f6e"
+    sources[0].src = "https://talkify.net/api/speech/v1?voice=David&text="+msg+"&key=a2a8cfec-9d50-4c94-a135-b1b178538f6e"
 
     audio.load();
 }
