--- a/playsound.html
+++ b/playsound.html
@@ -25,7 +25,7 @@
 
     </body>-->
 	
-	<script src='https://code.jquery.com/jquery-2.2.0.min.js'></script>
+	<script src='jquery-2.2.0.min.js'></script>
 	    <script type="text/css">
 	    #background {
     position: fixed;
@@ -42,7 +42,7 @@
 }
 
 	    </script>
-<script src='https://cdn.rawgit.com/admsev/jquery-play-sound/master/jquery.playSound.js'></script>
+<script src='jquery.playSound.js'></script>
 	    <body style="background:transparent">
 <!--<audio id="audiotag1" src='http://soundbible.com/grab.php?id=843&type=mp3' preload="auto" autoplay="autoplay"></audio>-->
 <button onclick='$.playSound("media/manual_pbm_count_abu_dhabi.mp3")'>Test Alarm</button>
