--- a/PopUpCode.html
+++ b/PopUpCode.html
@@ -22,19 +22,18 @@
 }
 
 	    </script>
-<script src='jquery.playSound.js'></script>
 	    <body style="background:transparent">
 
-<button onclick="myFunction()">Test PopUp</button>
-<script type ="text/javascript">
-function myFunction() {
+<button onclick='window.alert("This is Test Alert Box for ApPD")'>Test PopUp</button>
+
+<script type="text/javascript">
+function myFunction() 
+{
 alert("This is Test Alert Box");
 }
 
 
 
-
-<!--
 
 var alarmFlag = true;
 function playMe(playfile){
@@ -42,7 +41,6 @@ function playMe(playfile){
 	
 }
 
--->
 
 function(){
 $.ajax({
@@ -93,7 +91,6 @@ checkHealthRule();
 setInterval(checkHealthRule, 55000);
 setInterval(resetAlarmFlag, 900000);
 </script>
-
 
 	    </body>
 </html>
