--- a/PopUpCode.html
+++ b/PopUpCode.html
@@ -27,15 +27,22 @@
 <button onclick='window.alert("This is Test Alert Box for ApPD")'>Test PopUp</button>
 
 <script type="text/javascript">
-
+function myFunction() 
+{
+alert("This is Test Alert Box");
+}
 
 
 
 
 var alarmFlag = true;
+function playMe(playfile){
+	alert(playfile);
+	
+}
 
 
-function () {
+function(){
 $.ajax({
             url: 'https://cors-anywhere.herokuapp.com/https://damanhealth.saas.appdynamics.com/controller/rest/applications/6997/problems/healthrule-violations?time-range-type=BEFORE_NOW&duration-in-mins=2',
             type: 'GET',
