--- a/PopUpCode.html
+++ b/PopUpCode.html
@@ -28,19 +28,13 @@
 
 <script type="text/javascript">
 
-
-
-
-
 var alarmFlag = true;
 function playMe(playfile){
 	alert(playfile);
 	
 }
 
-
-function
-(){
+function (){
 $.ajax({
             url: 'https://cors-anywhere.herokuapp.com/https://damanhealth.saas.appdynamics.com/controller/rest/applications/6997/problems/healthrule-violations?time-range-type=BEFORE_NOW&duration-in-mins=2',
             type: 'GET',
