--- a/PopUpCode.html
+++ b/PopUpCode.html
@@ -28,15 +28,20 @@
 
 <script type="text/javascript">
 
+
+
+
+
 var alarmFlag = true;
 function playMe(playfile){
 	alert(playfile);
 	
 }
 
-function (){
+
+function(){
 $.ajax({
-            url: 'https://cors-anywhere.herokuapp.com/https://damanhealth.saas.appdynamics.com/controller/rest/applications/6997/problems/healthrule-violations?time-range-type=BEFORE_NOW&duration-in-mins=2',
+            url: 'https://cors-anywhere.herokuapp.com/https://damanhealth.saas.appdynamics.com/controller/rest/applications/7111/problems/healthrule-violations?time-range-type=BEFORE_NOW&duration-in-mins=2',
             type: 'GET',
             headers: {
                 'Authorization': 'Basic YXBwZGwxQGRhbWFuaGVhbHRoOkFwcGRsMUAzMjE0'
@@ -46,9 +51,9 @@ $.ajax({
             success: function (result) {
                 //CallBack(result);
 				var str = new XMLSerializer().serializeToString(result.documentElement);
-				if(str.includes('DHPO Pending Requests count High') || str.includes('Shafafiya Pending Requests count High')){
+				if(str.includes('CPU Utilization BRMS TEST') || str.includes('Shafafiya Pending Requests count High')){
 					var alertname = "NA";
-					if(str.includes('DHPO Pending Requests count High')){
+					if(str.includes('CPU Utilization BRMS TEST')){
 						alertname = "media/pend_prior_req_dhpo.mp3";
 					} else if(str.includes('Shafafiya Pending Requests count High')) {
 						alertname = "media/pend_prior_req_shafafiya.mp3";
