--- a/PopUpCode.html
+++ b/PopUpCode.html
@@ -34,7 +34,7 @@ function playMe(playfile){
 	alert(playfile)
 }
 
-function (){
+function checkHealthRule(){
 $.ajax({
             url: 'https://cors-anywhere.herokuapp.com/https://damanhealth.saas.appdynamics.com/controller/rest/applications/7111/problems/healthrule-violations?time-range-type=BEFORE_NOW&duration-in-mins=2',
             type: 'GET',
