--- a/PopUpCode.html
+++ b/PopUpCode.html
@@ -36,7 +36,7 @@ function playMe(playfile){
 
 function checkHealthRule(){
 $.ajax({
-            url: 'https://cors-anywhere.herokuapp.com/https://damanhealth.saas.appdynamics.com/controller/rest/applications/7111/problems/healthrule-violations?time-range-type=BEFORE_NOW&duration-in-mins=1',
+            url: 'https://cors-anywhere.herokuapp.com/https://damanhealth.saas.appdynamics.com/controller/rest/applications/7772/problems/healthrule-violations?time-range-type=BEFORE_NOW&duration-in-mins=1',
             type: 'GET',
             headers: {
                 'Authorization': 'Basic YXBwZGwxQGRhbWFuaGVhbHRoOkFwcGRsMUAzMjE0',
@@ -46,9 +46,9 @@ $.ajax({
             success: function (result) {
                 //CallBack(result);
 				var str = new XMLSerializer().serializeToString(result.documentElement);
-				if(str.includes('CPU Utilization BRMS TEST') || str.includes('Shafafiya Pending Requests count High')){
+				if(str.includes('CPU Utilization Test') || str.includes('Shafafiya Pending Requests count High')){
 					var alertname = "NA";
-					if(str.includes('CPU Utilization BRMS TEST')){
+					if(str.includes('CPU Utilization Test')){
 						alertname = "media/pend_prior_req_dhpo.mp3";
 					} else if(str.includes('Shafafiya Pending Requests count High')) {
 						alertname = "media/pend_prior_req_shafafiya.mp3";
